{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 2476,
  "lineage": "e95c8b55-d407-8439-7b9f-2ee215b88330",
  "resources": [
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f19d220602031aed",
            "arn": "arn:aws:ec2:us-east-2:171114713287:instance/i-003f562959fd7c1c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003f562959fd7c1c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "umgcoatepeque-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09161203254026249",
            "private_dns": "ip-10-0-2-187.us-east-2.compute.internal",
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-18-220-251-69.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.251.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084f5cc6ab5e5698e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e4b206ec9bb0023",
            "tags": {
              "Name": "Bastion_host"
            },
            "tags_all": {
              "Name": "Bastion_host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0040b9997a171e181"
            ]
          },
          "dependencies": [
            "module.umg_alb_asg.aws_security_group.bastion_host",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:171114713287:loadbalancer/app/umgcoatepeque-alb/296d473b7db76d44",
            "arn_suffix": "app/umgcoatepeque-alb/296d473b7db76d44",
            "dns_name": "umgcoatepeque-alb-1525852177.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:171114713287:loadbalancer/app/umgcoatepeque-alb/296d473b7db76d44",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "umgcoatepeque-alb",
            "security_groups": [
              "sg-0dc0a0334c1e5f292"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e4b206ec9bb0023"
              },
              {
                "subnet_id": "subnet-0bc0479b3723dcbf4"
              }
            ],
            "subnets": [
              "subnet-08e4b206ec9bb0023",
              "subnet-0bc0479b3723dcbf4"
            ],
            "tags": {
              "Name": "alb-tf"
            },
            "tags_all": {
              "Name": "alb-tf"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.umg_alb_asg.aws_security_group.sg-alb",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:171114713287:listener/app/umgcoatepeque-alb/296d473b7db76d44/f205f1492b94964d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:171114713287:targetgroup/umgcoatepeque-tg/2b814c764b6fc279",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:171114713287:listener/app/umgcoatepeque-alb/296d473b7db76d44/f205f1492b94964d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:171114713287:loadbalancer/app/umgcoatepeque-alb/296d473b7db76d44",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_alb_asg.aws_lb.my-alb",
            "module.umg_alb_asg.aws_lb_target_group.my-alb-target-group",
            "module.umg_alb_asg.aws_security_group.sg-alb",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:171114713287:targetgroup/umgcoatepeque-tg/2b814c764b6fc279",
            "arn_suffix": "targetgroup/umgcoatepeque-tg/2b814c764b6fc279",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:171114713287:targetgroup/umgcoatepeque-tg/2b814c764b6fc279",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "umgcoatepeque-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:security-group/sg-0040b9997a171e181",
            "description": "permitir SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0040b9997a171e181",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_host_SG",
            "name_prefix": "",
            "owner_id": "171114713287",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:security-group/sg-0dc0a0334c1e5f292",
            "description": "security group para el balanceador de carga",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc0a0334c1e5f292",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "umgcoatepeque-sg-alb",
            "name_prefix": "",
            "owner_id": "171114713287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "umgcoatepeque-sg-alb"
            },
            "tags_all": {
              "Name": "umgcoatepeque-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.umg_alb_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:security-group/sg-08c29e2aa64c6eaaf",
            "description": "security group para las instancias de autoescalado",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c29e2aa64c6eaaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc0a0334c1e5f292"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "umgcoatepeque-sg-webserver",
            "name_prefix": "",
            "owner_id": "171114713287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "umgcoatepeque-sg-webserver"
            },
            "tags_all": {
              "Name": "umgcoatepeque-sg-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_alb_asg.aws_security_group.sg-alb",
            "module.umg_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.umg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:security-group/sg-0359b3f0e1f3b8d42",
            "description": "security group para la base de datos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0359b3f0e1f3b8d42",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c29e2aa64c6eaaf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "umgcoatepeque-sg-database",
            "name_prefix": "",
            "owner_id": "171114713287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "umgcoatepeque-sg-database"
            },
            "tags_all": {
              "Name": "umgcoatepeque-sg-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_alb_asg.aws_security_group.sg-alb",
            "module.umg_alb_asg.aws_security_group.sg-instances",
            "module.umg_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d1bd38c1f566369e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-129-77.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.129.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "umgcoatepeque-eip"
            },
            "tags_all": {
              "Name": "umgcoatepeque-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:internet-gateway/igw-00bfb7c09c5c2601f",
            "id": "igw-00bfb7c09c5c2601f",
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-gw"
            },
            "tags_all": {
              "Name": "umgcoatepeque-gw"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1bd38c1f566369e",
            "connectivity_type": "public",
            "id": "nat-037937cca890edbf1",
            "network_interface_id": "eni-09fdd5b309b90867d",
            "private_ip": "10.0.1.78",
            "public_ip": "3.22.129.77",
            "subnet_id": "subnet-0bc0479b3723dcbf4"
          },
          "dependencies": [
            "module.umg_vpc.aws_eip.nat",
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:route-table/rtb-0fb803e630bcef8c0",
            "id": "rtb-0fb803e630bcef8c0",
            "owner_id": "171114713287",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037937cca890edbf1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "umgcoatepeque-rt-privada"
            },
            "tags_all": {
              "Name": "umgcoatepeque-rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_vpc.aws_eip.nat",
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_nat_gateway.nat-gw",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:route-table/rtb-0047907955522214e",
            "id": "rtb-0047907955522214e",
            "owner_id": "171114713287",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bfb7c09c5c2601f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "umgcoatepeque-rt-publica"
            },
            "tags_all": {
              "Name": "umgcoatepeque-rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a149e005bc317b",
            "route_table_id": "rtb-0fb803e630bcef8c0",
            "subnet_id": "subnet-0183dcacb4a865f76"
          },
          "dependencies": [
            "module.umg_vpc.aws_eip.nat",
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_nat_gateway.nat-gw",
            "module.umg_vpc.aws_route_table.main-private",
            "module.umg_vpc.aws_subnet.main-private",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d9184d3b577ab1d",
            "route_table_id": "rtb-0fb803e630bcef8c0",
            "subnet_id": "subnet-0af3668b8c907a412"
          },
          "dependencies": [
            "module.umg_vpc.aws_eip.nat",
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_nat_gateway.nat-gw",
            "module.umg_vpc.aws_route_table.main-private",
            "module.umg_vpc.aws_subnet.main-private",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068bfd1ae8afffe55",
            "route_table_id": "rtb-0047907955522214e",
            "subnet_id": "subnet-0bc0479b3723dcbf4"
          },
          "dependencies": [
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_route_table.main-public",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c998da62ddbee7b",
            "route_table_id": "rtb-0047907955522214e",
            "subnet_id": "subnet-08e4b206ec9bb0023"
          },
          "dependencies": [
            "module.umg_vpc.aws_internet_gateway.main-gw",
            "module.umg_vpc.aws_route_table.main-public",
            "module.umg_vpc.aws_subnet.main-public",
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:subnet/subnet-0183dcacb4a865f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0183dcacb4a865f76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-subredprivada-0"
            },
            "tags_all": {
              "Name": "umgcoatepeque-subredprivada-0"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:subnet/subnet-0af3668b8c907a412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0af3668b8c907a412",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-subredprivada-1"
            },
            "tags_all": {
              "Name": "umgcoatepeque-subredprivada-1"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:subnet/subnet-0bc0479b3723dcbf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bc0479b3723dcbf4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-subredpublica-0"
            },
            "tags_all": {
              "Name": "umgcoatepeque-subredpublica-0"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:subnet/subnet-08e4b206ec9bb0023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08e4b206ec9bb0023",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-subredpublica-1"
            },
            "tags_all": {
              "Name": "umgcoatepeque-subredpublica-1"
            },
            "vpc_id": "vpc-0dc2e35cb75b41c99"
          },
          "dependencies": [
            "module.umg_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.umg_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:171114713287:vpc/vpc-0dc2e35cb75b41c99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036d8d59c825ba95b",
            "default_route_table_id": "rtb-0a03edd140281fd68",
            "default_security_group_id": "sg-067479dba8e1ca06a",
            "dhcp_options_id": "dopt-096c1f62",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dc2e35cb75b41c99",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a03edd140281fd68",
            "owner_id": "171114713287",
            "tags": {
              "Name": "umgcoatepeque-vpc"
            },
            "tags_all": {
              "Name": "umgcoatepeque-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}